# research-mcp-aggregator

./: .gitignore  LICENSE  MEMORY.md  PIPELINE_PLAN_MATLAB.md  PIPELINE_PLAN_MEMORY.md  README.md  README.zh-CN.md  UNITS_MATLAB.csv  UNITS_MEMORY.csv  external_mcp_sources.json  pyproject.toml
.github/workflows/: ci.yml
examples/: external_mcp_servers.example.json
scripts/: audit_external_mcps.py  vendor_external_mcps.py
src/research_mcp/: __init__.py  external_catalog.py  mcp_bridge.py  server.py
src/research_mcp/adapters/: __init__.py  arxiv_adapter.py  docx_adapter.py  external_mcp_adapter.py  figure_adapter.py  latex_adapter.py  matlab_adapter.py  mcp_bridge_adapter.py  memory_adapter.py  nature_adapter.py  openalex_adapter.py  origin_adapter.py  pdf_adapter.py  pfc_docs_adapter.py  semantic_scholar_adapter.py  simulation_adapter.py  workflow_adapter.py  writing_adapter.py  zotero_adapter.py
src/research_mcp/memory/: __init__.py  models.py  store.py
src/research_mcp/simulation/: command_utils.py  comsol_backend.py  fluent_backend.py  parsers.py  pfc_bridge_backend.py  plotting.py  tool_specs.py  tool_specs_common.py  tool_specs_comsol.py  tool_specs_fluent.py  tool_specs_pfc.py  workflow_templates.py
src/research_mcp/utils/: __init__.py
tests/: conftest.py  test_adapter_registry.py  test_docx.py  test_external_mcp_catalog.py  test_figure.py  test_latex.py  test_literature_helpers.py  test_live_literature_adapters.py  test_matlab_adapter.py  test_mcp_bridge.py  test_memory_adapter.py  test_memory_store.py  test_nature_workflows.py  test_origin_adapter.py  test_packaging.py  test_pdf.py  test_pfc_bridge.py  test_pfc_docs.py  test_research_workflows.py  test_server_validation.py  test_simulation.py  test_tool_schemas.py  test_vendor_sources.py  test_writing.py
vendors/: README.md
