[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-mcp"
version = "0.1.0"
description = "An engineering-focused MCP server for scientific research, simulation workflows, literature management, paper writing, and figure generation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.13"
authors = [{ name = "loLollipop", email = "2516731482@qq.com" }]
keywords = ["mcp", "research", "scientific", "engineering", "simulation", "comsol", "fluent", "pfc", "zotero"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/loLollipop/research-mcp-aggregator"
Repository = "https://github.com/loLollipop/research-mcp-aggregator"
Issues = "https://github.com/loLollipop/research-mcp-aggregator/issues"

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "jsonschema>=4",
    "matplotlib>=3.8.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
arxiv = ["arxiv>=2.1.0"]
semantic-scholar = []
openalex = []
zotero = []
comsol = ["MPh>=1.2.0", "JPype1>=1.5.0"]
fluent = ["ansys-fluent-core>=0.15.0"]
pfc = ["websockets>=15.0"]
simulation = ["websockets>=15.0"]
figure = ["matplotlib>=3.8.0"]
dev = ["build>=1.2.0", "mypy>=1.10.0", "pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0"]
all = [
    "ansys-fluent-core>=0.15.0",
    "arxiv>=2.1.0",
    "JPype1>=1.5.0",
    "matplotlib>=3.8.0",
    "MPh>=1.2.0",
    "websockets>=15.0",
]

[project.scripts]
research-mcp = "research_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/research_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "live: tests that call live external services and are skipped by default",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "vendors/external"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
